feat: auth-module completo y book-catalog base implementado